Support per-rule options, and add virtual option to C++ code generation
The format of g4 files has been supporting per-rule options as
`RuleName options { optionName=value; } : ...;` for a long time,
and ANTLRv4 has been supporting at least one such option
(`caseInsensitive`) since 4.10.

This commit adds support for per-rule options in general (i.e.,
such options are parsed and stored in internal data structures),
and defines the `virtual` option (both at grammar and rule levels)
to control the C++ code generation, i.e., whether methods
corresponding to grammar rules should be virtual or not.

As a result, this change enables the Custom.g4 test case among the
C++ grammar tests. (The Python counterpart is adapted accordingly.)

--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.hpp.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.hpp.jinja
@@ -167,7 +167,7 @@ public:
     {% endif %}
 
     {% for rule in graph.rules %}
-    Rule* {{ rule.id | join('_') }}({% for t, k, v in rule.args %}{{ t }} {{ k }}{% if v %}={{ resolveVarRefs(v) }}{% endif %}, {% endfor %}Rule *parent = nullptr) {
+    {% if rule.options.get('virtual', graph.options.get('virtual', 'false')) == 'true' %}virtual {% endif %}Rule* {{ rule.id | join('_') }}({% for t, k, v in rule.args %}{{ t }} {{ k }}{% if v %}={{ resolveVarRefs(v) }}{% endif %}, {% endfor %}Rule *parent = nullptr) {
         {% if rule.labels or rule.args or rule.locals or rule.returns %}
         struct {
             {% for t, k, _ in rule.args %}
