Always generate virtual methods for `tokens` in C++
Tokens without and associated lexer rule are useless if they cannot
be overridden. Therefore, all (almost empty) methods that are
generated for such tokens are generated as `virtual` in C++ code
generation.

As a result, this change enables the ImagToken.g4 test case among
the C++ grammar tests.

--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.hpp.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.hpp.jinja
@@ -156,7 +156,7 @@ public:
     explicit {{ graph.name }}(Model* model=new DefaultModel(), const std::vector<Listener*>& listeners={}, const RuleSize& limit=RuleSize::max()) : {{ graph.superclass }}(model, listeners, limit) {}
 
     {% for rule in graph.imag_rules %}
-    Rule* {{ rule.id | join('_') }}(Rule *parent = nullptr) {
+    virtual Rule* {{ rule.id | join('_') }}(Rule *parent = nullptr) {
         UnlexerRuleContext rule(this, "{{ rule.id | join('_') }}", parent);
         return rule.current();
     }
